--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robin Hood</title>
+    <title>Robin-Hood-Plumbing</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,27 +24,27 @@
         <img src="./images/service1.jpg" alt="">
         <div class="blog-card-content">
             <h2>Plumbing Service</h2>
-            <p>We strive to exceed expectations by ensuring that all plumbing work is completed to the highest standards.  We will provide you with a free consultation to explain all of your available options so that you can choose the scope or work that’s right for your home or business.</p>
+            <p>Our team is here for all your plumbing services provided to you in all your needs in plumbing services we provide very good support to our customers and clients in all their plumbing services.</p>
         </div>
     </div>
     <div class="blog-card">
         <img src="./images/service2.jpg" alt="">
         <div class="blog-card-content">
             <h2>Carpenter Service</h2>
-            <p>Our team of skilled carpenters is dedicated to transforming your vision into reality, enhancing the beauty and functionality of your home. From intricate woodwork to structural repairs, we have the expertise to handle all your carpentry needs with precision and care.</p>
+            <p>You as our customer and clients can trast us in your day to day life carpenter services we are all here for you in your day to day life wooden work and other carpentry works our team is specialized in wooden works.</p>
         </div>
     </div>
     <div class="blog-card">
         <img src="./images/service3.jpg" alt="">
         <div class="blog-card-content">
             <h2>Painting Service</h2>
-            <p>we understand the profound impact that a fresh coat of paint can have on a space. Whether you're looking to revitalize your home, refresh your office environment, or enhance the appeal of your commercial property, our professional painting services are tailored to meet your unique needs.</p>
+            <p>My team understands your home painiting and other paining things which is difficult nowadays for you people in day to day life thats why you hire us our team is really good in painting services we are specialized in these things.</p>
         </div>
     </div>
     <div class="our-team">
         <div class="our-team-header">
             <h2>Our Team</h2>
-            <p>We have trained an experienced team of plumbers which will help you to solve your all plumbing needs.</p>
+            <p>our team is really specialized in painting carpentry and plumbing job we are trained and professional.</p>
         </div>
         <div class="our-team-bottom">
             <li>Check all plumbing fittings in toilets for proper operation.</li>
