--- a/about/about.html
+++ b/about/about.html
@@ -21,14 +21,14 @@
         <img src="../images/about header.jpg" alt="">
         <div class="header-content">
             <h1>About Us</h1>
-            <p>Whether you need a simple faucet installation or complete sewer line replacement, we offer a wide range of residential and commercial plumbing services to meet your needs. We continually strive to exceed expectations by ensuring that each client receives the very best service. </p>
+            <p>Our team is highly trained and professional workers and all are well educated and have good experience in your daily needs work like plumbing carpentry and other things so we recommend us to do your work. </p>
         </div>
     </header>
     <div class="service-section">
         <div class="service-card">
             <img src="../images/aboutService1.jpg" alt="">
             <h3>Reliable Professionals</h3>
-            <p>Whether you need a simple faucet installation or complete sewer line replacement, we offer a wide range of residential and commercial plumbing services to meet your needs. We continually strive to exceed expectations by ensuring that each client receives the very best service. </p>
+            <p>we provide best work for your home work like plumbing carpentry and other things we are very reliable and professional to do your work while you are doing your work if you choose us we will provide our clients and customers with really great work and you will call us again and again. </p>
         </div>
         <div class="service-card">
             <img src="../images/aboutService2.jpg" alt="">
@@ -46,7 +46,7 @@
         <img src="../images/banner.jpg" alt="">
     </div>
     <footer>
-        <h4>Copyright © 2023 Robinhood Plumbing Experts - All Rights Reserved. </h4>
+        <h4>Copyright © 2023 Robin-hood Plumbing Experts - All Rights Reserved. </h4>
     </footer>
 </body>
 </html>
