--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
         <div class="navbar-left">
-            <h3 style="color:white">Robinhood Plumbing Experts</h3>
+            <h3 style="color:white">Robin-hood Plumbing Experts</h3>
         </div>
         <div class="navbar-right">
             <a href="./blog/index.html?a8d07f43-feca-4662-8455-4351b343ab0f-XAzyfebksfw/fsfwihfdh?query=search-for-blogAZunbbb">Blog</a>
