--- a/faq/faq.html
+++ b/faq/faq.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
         <div class="navbar-left">
-            <h3 style="color:white">Robinhood Plumbing Experts</h3>
+            <h3 style="color:white">Robin-hood Plumbing Experts</h3>
         </div>
         <div class="navbar-right">
             <a href="../index.html?a8d07f43-feca-4662-8455-4351b343ab0f-XAzyfebksfw/fsfwihfdh?query=search-for-blogAZunbbb">Blog</a>
@@ -20,9 +20,9 @@
     <div class="faq-header">
         <h2>FAQs (Frequently Asked Questions)</h2>
         <h3>How much does it cost for a consultation?</h3>
-        <p>We can offer you a free quote based on a remote interview, or we charge our basic.</p>
+        <p>our team is here for you in all your needs 24/7.</p>
         <h3>Do You Offer a warranty on your work?</h3>
-        <p>We stand by our products and services 100%, and we provide a 1-year warranty free of charge. </p>
+        <p>our team stand here for you and you only. </p>
         <h3>Do I need to get permits or is that covered under the repair/work costs?</h3>
         <p>Any permits or inspections needed to complete the job are covered in our fees and handled accordingly.</p>
     </div>
@@ -30,7 +30,7 @@
         <img src="../images/banner.jpg" alt="">
     </div>
     <footer>
-        <h4>Copyright © 2023 Robinhood Plumbing Experts - All Rights Reserved. </h4>
+        <h4>Copyright © 2023 Robin-hood Plumbing Experts - All Rights Reserved. </h4>
     </footer>
 </body>
 </html>
